update pictures page

--- a/pictures.html
+++ b/pictures.html
@@ -8,12 +8,35 @@
     <h3>Resort Facilities</h3>
       <ul>
         <li>Room</li>
-          <img src="" alt="">
+        <ul>
+          <li><img src="img/room1.jpg" alt="A picture of a room"></li>
+          <li><img src="img/room2.jpg" alt="A picture of a room"></li>
+        </ul>
         <li>Pool</li>
+        <ul>
+          <li><img src="img/pool1.jpg" alt="A picture of a pool"></li>
+          <li><img src="img/pool2.jpg" alt="A picture of a pool"></li>
+        </ul>
         <li>Spa</li>
+        <ul>
+          <li><img src="img/spa1.jpg" alt="A picture of a spa"></li>
+          <li><img src="img/spa2.jpg" alt="A picture of a spa"></li>
+          </ul>
         <li>Fitness Center</li>
+        <ul>
+          <li><img src="img/fitness1.jpg" alt="A picture of a fitness center"></li>
+          <li><img src="img/fitness2.jpeg" alt="A picture of a fitness center"></li>
+          </ul>
         <li>Child Care Center</li>
+        <ul>
+          <li><img src="img/child1.jpg" alt="A picture of a child care center"></li>
+          <li><img src="img/child2.jpg" alt="A picture of a child care center"></li>
+          </ul>
         <li>Dining</li>
+        <ul>
+          <li><img src="img/dining1.jpg" alt="A picture of a dining room"></li>
+          <li><img src="img/dining2.jpg" alt="A picture of a dining room"></li>
+          </ul>
       </ul>
   </body>
 </html>
