add new images for pool and create accomodations page

--- a/pictures.html
+++ b/pictures.html
@@ -14,7 +14,7 @@
         </ul>
         <li>Pool</li>
         <ul>
-          <li><img src="img/pool1.jpg" alt="A picture of a pool"></li>
+          <li><img src="img/pool1.jpeg" alt="A picture of a pool"></li>
           <li><img src="img/pool2.jpg" alt="A picture of a pool"></li>
         </ul>
         <li>Spa</li>
