add separate stylesheet for pictures page

--- a/pictures.html
+++ b/pictures.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href="css/styles.css" rel="stylesheet" type="text/css">
+    <link href="css/picstyles.css" rel="stylesheet" type="text/css">
     <title>Pictures</title>
   </head>
   <body>
-    <h3>Resort Facilities</h3>
+    <h1>Resort Facilities</h3>
       <ul>
         <li>Room</li>
         <ul>
@@ -29,7 +29,7 @@
           </ul>
         <li>Child Care Center</li>
         <ul>
-          <li><img src="img/child1.jpg" alt="A picture of a child care center"></li>
+          <li><img src="img/child1.jpeg" alt="A picture of a child care center"></li>
           <li><img src="img/child2.jpg" alt="A picture of a child care center"></li>
           </ul>
         <li>Dining</li>
