change back ground image

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   <body>
     <h1>A Private Island Resort</h1>
     <h3>Located in the middle of the Pacific Ocean</h3>
-    <img src="img/island.jpg" alt="A photo of a private island.">
 
     <h3>About:</h3>
-    <p>Private Island Resort is located in the sunny oasis of To'opua, Bora Bora. The resort includes 30 luxury cabins directly on the water. Snorkel from your front steps!</p>
+    <p>Private Island Resort is located in the sunny oasis of To'opua, Bora Bora.</p>
+    <p>The resort includes 30 luxury cabins directly on the water. Snorkel from your front steps!</p>
 
     <h3>Why should you stay at our resort?</h3>
     <ul>
